@@ -44,6 +44,13 @@ Summary of important user-visible changes for image 2.0.1:
     functions that use them, such `imopen' and `imclose', also get a performance
     boost for black and white images.
 
+ ** The performance of `imresize()' has been greatly improved when using the
+    nearest neighbor method for N or 1/N scale factors (e.g.: 2, 50, 1/4, 1/7).
+
+ ** The `imresize' function will now accept any interpolation method available
+    in `interp2()'.  At the moment, means that the `spline' method is new.  The
+    `triangle' method has also been added (same as the `linear' method).
+
 Summary of important user-visible changes for image 2.0.0:
 -------------------------------------------------------------------
 
